# c-challenges

./: .gitignore  LICENSE  README.md
DecimalTimeConversion/app/: main.cc
DecimalTimeConversion/src/my_lib/: my_lib.cc  my_lib.h
NumberOfPeopleInTheBus/app/: .main.cc.swp  main.cc
NumberOfPeopleInTheBus/src/my_lib/: .my_lib.cc.swp  .my_lib.h.swp  my_lib.cc  my_lib.h
PersistentBugger/app/: main.cc
PersistentBugger/src/my_lib/: my_lib.cc  my_lib.h
ShortestWord/app/: main.cc
ShortestWord/src/my_lib/: my_lib.cc  my_lib.h
StoreSimulation/app/: .main.cc.swp  main.cc
SumWithoutHighestAndLowestNumber/app/: main.cc
SumWithoutHighestAndLowestNumber/src/my_lib/: my_lib.cc  my_lib.h
set0/: CMakeLists.txt
set0/app/: CMakeLists.txt  bibliotecalocadorasoftblue.cc  emirps.cc  test01.c  test01.cc
set0/src/: CMakeLists.txt
set0/src/emirps/: CMakeLists.txt  test01.c  test01.h
set0/src/libraryBibliotecalocadorasoftblue/: CMakeLists.txt  Livro.cc  Livro.h
set0/src/test01/: CMakeLists.txt
