# add_executable(Executable test01.cc)
# target_link_libraries(Executable PUBLIC LibraryTest01)

# add_executable(Executable emirps.cc)
# target_link_libraries(Executable PUBLIC LibraryEmirps)

add_executable(Executable bibliotecalocadorasoftblue.cc)
target_link_libraries(Executable PUBLIC LibraryBibliotecalocadorasoftblue)
